Fix footer layout bug. Now the footer is fixed on bottom only on devices has width larger than 991px(992px~).

--- a/web/static/web/css/_footer.css
+++ b/web/static/web/css/_footer.css
@@ -1,6 +1,16 @@
 .footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   height: 3em;
+}
+
+@media (min-width: 992px) {
+  .footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 3em;
+  }
+  body {
+    margin-bottom: 3em;
+  }
 }
